aprendendo a usar e a ler as config no AppSettings,json

--- a/MyFirstApi/appsettings.json
+++ b/MyFirstApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  
+  
+  
+  "MyClass": {
+    "PropA": "Value 1",
+    "Prop1": "Kayo",
+    "Number": 19
+  }
 }
